--- a/hugo.yml
+++ b/hugo.yml
@@ -69,7 +69,7 @@ params:
     - name: github
       url: "https://github.com/mkforde/hugo-portfolio-demo"
     - name: linkedin
-      url: "https://www.linkedin.com/in/michaelkforde/"
+      url: "https://www.linkedin.com/"
     # - name: instagram
     #   url: "https://www.instagram.com/"
 
